# crucible

./: .gitignore  Cargo.toml  README.md
crates/crucible-cli/: Cargo.toml
crates/crucible-cli/src/: main.rs
crates/crucible-core/: Cargo.toml
crates/crucible-core/src/: harness.rs  lib.rs  orchestrator.rs  timing.rs  verdict.rs
crates/crucible-ml-dsa/: Cargo.toml
crates/crucible-ml-dsa/src/: battery.rs  lib.rs  math.rs  params.rs
crates/crucible-ml-dsa/src/battery/: category1_norms.rs  category2_arith.rs  category3_signing.rs  category4_verify.rs  category5_serial.rs  category6_timing.rs
crates/crucible-ml-dsa/src/math/: decompose.rs  encode.rs  ntt.rs  sampling.rs  sign.rs
crates/crucible-ml-kem/: Cargo.toml
crates/crucible-ml-kem/src/: battery.rs  lib.rs  math.rs  params.rs  tests.rs
crates/crucible-ml-kem/src/battery/: category1_compress.rs  category2_ntt.rs  category3_bounds.rs  category4_decaps.rs  category5_serial.rs  category6_sampling.rs
crates/crucible-ml-kem/src/math/: compress.rs  encode.rs  kpke.rs  ntt.rs  sampling.rs
harnesses/aws-lc/: harness  harness.c
harnesses/bouncy-castle/: CrucibleHarness.java  harness-bouncy-castle.sh
harnesses/bouncy-castle-rust/: Cargo.toml  readme.md
harnesses/bouncy-castle-rust/src/: main.rs
harnesses/circl/: go.mod  internals.go  main.go
harnesses/go-stdlib/: go.mod  main.go
harnesses/itzmeanjan/: harness-itzmeanjan  harness.cpp
harnesses/kyber-k2so/: go.mod  go.sum  internals.go  main.go
harnesses/libcrux/: Cargo.toml
harnesses/libcrux/src/: main.rs
harnesses/liboqs/: harness.c
harnesses/mlkem-native/: harness-mlkem-native  harness.c
harnesses/noble-post-quantum/: harness.ts  package.json
harnesses/orion/: Cargo.toml
harnesses/orion/src/: main.rs
harnesses/pq-crystals/: harness-pq-crystals  harness.c
harnesses/pqclean/: harness-pqclean  harness.c
harnesses/pqcrypto/: Cargo.toml
harnesses/pqcrypto/src/: main.rs
harnesses/reference/: Cargo.toml
harnesses/reference/src/: main.rs
harnesses/templates/: template-ml-dsa.c  template-ml-dsa.go  template-ml-dsa.rs  template.c  template.go  template.rs
harnesses/tob-mldsa/: go.mod  go.sum  main.go
harnesses/wolfssl/: harness  harness.c
harnesses/zig-stdlib/: build.zig
harnesses/zig-stdlib/src/: main.zig
