[workspace]
members = ["crates/*", "harnesses/reference", "harnesses/libcrux"]
exclude = ["harnesses/kyber-k2so"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
sha3 = "0.10"
