[package]
name = "crucible-ml-kem"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ML-KEM (FIPS 203) test battery for Crucible"

[dependencies]
crucible-core = { path = "../crucible-core" }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
hex.workspace = true
