[package]
name = "crucible-harness-orion"
version = "0.1.0"
edition = "2024"
description = "Harness for Orion ML-KEM"

[[bin]]
name = "harness-orion"
path = "src/main.rs"

[dependencies]
orion = { version = "=0.17.13" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[workspace]